--- a/css/style.css
+++ b/css/style.css
@@ -46,17 +46,17 @@ body {
   content: "";
 }
 
-a {
-  color: #F14E95;
-  -webkit-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
-}
-a:hover, a:active, a:focus {
-  color: #F14E95;
-  outline: none;
-  text-decoration: none;
-}
+/*a {*/
+/*  color: #F14E95;*/
+/*  -webkit-transition: 0.5s;*/
+/*  -o-transition: 0.5s;*/
+/*  transition: 0.5s;*/
+/*}*/
+/*a:hover, a:active, a:focus {*/
+/*  color: #F14E95;*/
+/*  outline: none;*/
+/*  text-decoration: none;*/
+/*}*/
 
 p {
   margin-bottom: 20px;
@@ -879,7 +879,7 @@ form label {
 .fh5co-cover .display-tc .btn {
   padding: 15px 20px;
   background: #fff !important;
-  color: #F14E95;
+  color: #3f82bd;
   border: none !important;
   font-size: 14px;
   text-transform: uppercase;
@@ -942,7 +942,7 @@ form label {
   display: inline-block;
   width: 100px;
   height: 100px;
-  background: rgba(241, 78, 149, 0.8);
+  background: rgba(52, 112, 161, 0.8);
   margin: 0 4px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -1558,105 +1558,105 @@ form label {
   outline: none;
 }
 
-.fh5co-nav-toggle {
-  width: 25px;
-  height: 25px;
-  cursor: pointer;
-  text-decoration: none;
-}
-.fh5co-nav-toggle.active i::before, .fh5co-nav-toggle.active i::after {
-  background: #444;
-}
-.fh5co-nav-toggle:hover, .fh5co-nav-toggle:focus, .fh5co-nav-toggle:active {
-  outline: none;
-  border-bottom: none !important;
-}
-.fh5co-nav-toggle i {
-  position: relative;
-  display: inline-block;
-  width: 25px;
-  height: 2px;
-  color: #252525;
-  font: bold 14px/.4 Helvetica;
-  text-transform: uppercase;
-  text-indent: -55px;
-  background: #252525;
-  transition: all .2s ease-out;
-}
-.fh5co-nav-toggle i::before, .fh5co-nav-toggle i::after {
-  content: '';
-  width: 25px;
-  height: 2px;
-  background: #252525;
-  position: absolute;
-  left: 0;
-  transition: all .2s ease-out;
-}
-.fh5co-nav-toggle.fh5co-nav-white > i {
-  color: #fff;
-  background: #fff;
-}
-.fh5co-nav-toggle.fh5co-nav-white > i::before, .fh5co-nav-toggle.fh5co-nav-white > i::after {
-  background: #fff;
-}
+/*.fh5co-nav-toggle {*/
+/*  width: 25px;*/
+/*  height: 25px;*/
+/*  cursor: pointer;*/
+/*  text-decoration: none;*/
+/*}*/
+/*.fh5co-nav-toggle.active i::before, .fh5co-nav-toggle.active i::after {*/
+/*  background: #444;*/
+/*}*/
+/*.fh5co-nav-toggle:hover, .fh5co-nav-toggle:focus, .fh5co-nav-toggle:active {*/
+/*  outline: none;*/
+/*  border-bottom: none !important;*/
+/*}*/
+/*.fh5co-nav-toggle i {*/
+/*  position: relative;*/
+/*  display: inline-block;*/
+/*  width: 25px;*/
+/*  height: 2px;*/
+/*  color: #252525;*/
+/*  font: bold 14px/.4 Helvetica;*/
+/*  text-transform: uppercase;*/
+/*  text-indent: -55px;*/
+/*  background: #252525;*/
+/*  transition: all .2s ease-out;*/
+/*}*/
+/*.fh5co-nav-toggle i::before, .fh5co-nav-toggle i::after {*/
+/*  content: '';*/
+/*  width: 25px;*/
+/*  height: 2px;*/
+/*  background: #252525;*/
+/*  position: absolute;*/
+/*  left: 0;*/
+/*  transition: all .2s ease-out;*/
+/*}*/
+/*.fh5co-nav-toggle.fh5co-nav-white > i {*/
+/*  color: #fff;*/
+/*  background: #fff;*/
+/*}*/
+/*.fh5co-nav-toggle.fh5co-nav-white > i::before, .fh5co-nav-toggle.fh5co-nav-white > i::after {*/
+/*  background: #fff;*/
+/*}*/
 
-.fh5co-nav-toggle i::before {
-  top: -7px;
-}
+/*.fh5co-nav-toggle i::before {*/
+/*  top: -7px;*/
+/*}*/
 
-.fh5co-nav-toggle i::after {
-  bottom: -7px;
-}
+/*.fh5co-nav-toggle i::after {*/
+/*  bottom: -7px;*/
+/*}*/
 
-.fh5co-nav-toggle:hover i::before {
-  top: -10px;
-}
+/*.fh5co-nav-toggle:hover i::before {*/
+/*  top: -10px;*/
+/*}*/
 
-.fh5co-nav-toggle:hover i::after {
-  bottom: -10px;
-}
+/*.fh5co-nav-toggle:hover i::after {*/
+/*  bottom: -10px;*/
+/*}*/
 
-.fh5co-nav-toggle.active i {
-  background: transparent;
-}
+/*.fh5co-nav-toggle.active i {*/
+/*  background: transparent;*/
+/*}*/
 
-.fh5co-nav-toggle.active i::before {
-  top: 0;
-  -webkit-transform: rotateZ(45deg);
-  -moz-transform: rotateZ(45deg);
-  -ms-transform: rotateZ(45deg);
-  -o-transform: rotateZ(45deg);
-  transform: rotateZ(45deg);
-}
+/*.fh5co-nav-toggle.active i::before {*/
+/*  top: 0;*/
+/*  -webkit-transform: rotateZ(45deg);*/
+/*  -moz-transform: rotateZ(45deg);*/
+/*  -ms-transform: rotateZ(45deg);*/
+/*  -o-transform: rotateZ(45deg);*/
+/*  transform: rotateZ(45deg);*/
+/*}*/
 
-.fh5co-nav-toggle.active i::after {
-  bottom: 0;
-  -webkit-transform: rotateZ(-45deg);
-  -moz-transform: rotateZ(-45deg);
-  -ms-transform: rotateZ(-45deg);
-  -o-transform: rotateZ(-45deg);
-  transform: rotateZ(-45deg);
-}
+/*.fh5co-nav-toggle.active i::after {*/
+/*  bottom: 0;*/
+/*  -webkit-transform: rotateZ(-45deg);*/
+/*  -moz-transform: rotateZ(-45deg);*/
+/*  -ms-transform: rotateZ(-45deg);*/
+/*  -o-transform: rotateZ(-45deg);*/
+/*  transform: rotateZ(-45deg);*/
+/*}*/
 
-.fh5co-nav-toggle {
-  position: absolute;
-  right: 0px;
-  top: 10px;
-  z-index: 21;
-  padding: 6px 0 0 0;
-  display: block;
-  margin: 0 auto;
-  display: none;
-  height: 44px;
-  width: 44px;
-  z-index: 2001;
-  border-bottom: none !important;
-}
-@media screen and (max-width: 768px) {
-  .fh5co-nav-toggle {
-    display: block;
-  }
-}
+/*.fh5co-nav-toggle {*/
+/*  position: absolute;*/
+/*  right: 0px;*/
+/*  top: 10px;*/
+/*  z-index: 21;*/
+/*  padding: 6px 0 0 0;*/
+/*  display: block;*/
+/*  margin: 0 auto;*/
+/*  display: none;*/
+/*  height: 44px;*/
+/*  width: 44px;*/
+/*  z-index: 2001;*/
+/*  border-bottom: none !important;*/
+/*}*/
+/*@media screen and (max-width: 768px) {*/
+/*  .fh5co-nav-toggle {*/
+/*    display: block;*/
+/*  }*/
+/*}*/
 
 .btn {
   margin-right: 4px;
