--- a/css/style.css
+++ b/css/style.css
@@ -879,7 +879,7 @@ form label {
 .fh5co-cover .display-tc .btn {
   padding: 15px 20px;
   background: #fff !important;
-  color: #3f82bd;
+  color: #bda469;
   border: none !important;
   font-size: 14px;
   text-transform: uppercase;
@@ -1080,7 +1080,7 @@ form label {
 }
 .couple-half h3 {
   font-family: "Sacramento", Arial, serif;
-  color: #F14E95;
+  color: rgba(52, 112, 161, 0.86);
   font-size: 30px;
 }
 .couple-half .groom, .couple-half .bride {
@@ -1195,7 +1195,7 @@ form label {
   margin-bottom: 10px;
   line-height: 1.5;
   font-weight: bold;
-  color: #F14E95;
+  color: rgba(52, 112, 161, 0.86);
   font-family: "Sacramento", Arial, serif;
 }
 @media screen and (max-width: 768px) {
